* don't export FPC_VERSION, the compiler version can be different     between the native and cross compiler

--- a/tests/Makefile.fpc
+++ b/tests/Makefile.fpc
@@ -10,6 +10,7 @@ fpcdir=..
 rule=allexectests
 
 [rules]
+unexport FPC_VERSION
 
 ################################
 # Test environment setup
@@ -146,7 +147,7 @@ copyfiles:
 #
 
 testprep: testprep-stamp.$(TEST_OS_TARGET)
-testprep-stamp.$(TEST_OS_TARGET): utils units copyfiles FORCE
+testprep-stamp.$(TEST_OS_TARGET): utils units copyfiles
         $(ECHO) $(DATE) > testprep-stamp.$(TEST_OS_TARGET)
 
 
