* remote execute updates, see readme.txt

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1404,11 +1404,28 @@ endif
 ifndef TEST_OPT
 TEST_OPT=
 endif
+ifndef TEST_FPC_VERSION
+TEST_FPC_COMPILERINFO:=$(shell $(TEST_FPC) -iVSPTPSOTO)
+TEST_FPC_VERSION:=$(word 1,$(TEST_FPC_COMPILERINFO))
+endif
+export TEST_FPC TEST_FPC_VERSION TEST_FPC_COMPILERINFO
+ifneq ($(words $(TEST_FPC_COMPILERINFO)),5)
+TEST_FPC_COMPILERINFO+=$(shell $(TEST_FPC) -iSP)
+TEST_FPC_COMPILERINFO+=$(shell $(TEST_FPC) -iTP)
+TEST_FPC_COMPILERINFO+=$(shell $(TEST_FPC) -iSO)
+TEST_FPC_COMPILERINFO+=$(shell $(TEST_FPC) -iTO)
+endif
+ifndef TEST_CPU_SOURCE
+TEST_CPU_SOURCE:=$(word 2,$(TEST_FPC_COMPILERINFO))
+endif
 ifndef TEST_CPU_TARGET
-TEST_CPU_TARGET=$(CPU_TARGET)
+TEST_CPU_TARGET:=$(word 3,$(TEST_FPC_COMPILERINFO))
+endif
+ifndef TEST_OS_SOURCE
+TEST_OS_SOURCE:=$(word 4,$(TEST_FPC_COMPILERINFO))
 endif
 ifndef TEST_OS_TARGET
-TEST_OS_TARGET=$(OS_TARGET)
+TEST_OS_TARGET:=$(word 5,$(TEST_FPC_COMPILERINFO))
 endif
 ifndef TEST_CCOMPILER
 ifeq ($(CPU_TARGET),$(TEST_CPU_TARGET))
@@ -1419,10 +1436,6 @@ TEST_CCOMPILER:=$(firstword $(TEST_CCOMPILER))
 endif
 endif
 endif
-endif
-ifndef TEST_FPC_VERSION
-TEST_FPC_COMPILERINFO:=$(shell $(TEST_FPC) -iVSPTPSOTO)
-TEST_FPC_VERSION:=$(word 1,$(TEST_FPC_COMPILERINFO))
 endif
 ifndef FAILLIST
 export FAILLIST:=faillist
@@ -1465,7 +1478,7 @@ NOCOMSPEC=1
 endif
 units:
 	$(MAKE) -C units FPC=$(TEST_FPC) CPU_TARGET=$(TEST_CPU_TARGET) OS_TARGET=$(TEST_OS_TARGET) \
-			 OPT="$(TEST_OPT)" CCOMPILER=$(TEST_CCOMPILER)
+			 OPT="$(TEST_OPT)" CCOMPILER=$(TEST_CCOMPILER) BINUTILSPREFIX=$(TEST_BINUTILSPREFIX)
 copyfiles:
 	$(COPY) test/cg/obj/$(TEST_OS_TARGET)/$(TEST_CPU_TARGET)/ctest.o test/cg
 	$(COPY) test/units/system/test*.txt .
@@ -1479,6 +1492,21 @@ endif
 endif
 ifneq ($(OS_TARGET),$(TEST_OS_TARGET)) 
 override DOTESTOPT+=-Y-T$(TEST_OS_TARGET)
+endif
+ifneq ($(OS_TARGET),$(TEST_BINUTILSPREFIX)) 
+override DOTESTOPT+=-Y-XP$(TEST_BINUTILSPREFIX)
+endif
+ifdef TEST_RSH
+override DOTESTOPT+=-R$(TEST_RSH)
+endif
+ifdef TEST_SSH
+override DOTESTOPT+=-R$(TEST_SSH) -S
+endif
+ifdef TEST_REMOTEPATH
+override DOTESTOPT+=-P$(TEST_REMOTEPATH)
+endif
+ifdef TEST_VERBOSE
+override DOTESTOPT+=-V
 endif
 ifdef TEST_OPT
 override DOTESTOPT+=$(addprefix -Y, $(TEST_OPT))
