--- a/tests/units/Makefile.fpc
+++ b/tests/units/Makefile.fpc
@@ -65,7 +65,7 @@ fcl-stamp: rtl-stamp
         $(ECHO) Copied > fcl-stamp
 endif
 
-cleanrtlfcl : 
+cleanrtlfcl :
         -$(DEL) *$(PPUEXT)
         -$(DEL) *$(OEXT)
         -$(DEL) *$(ASMEXT)
@@ -85,15 +85,22 @@ endif
 # Extra units
 #
 
+
+TESTOPT=-n -FE. -Fu. -T$(OS_TARGET) $(OPT)
+ifneq ($(BINUTILSPREFIX),)
+override TESTOPT+=-XP$(BINUTILSPREFIX) -Xc
+endif
+TESTCOMPILER=$(FPC) $(TESTOPT)
+
 erroru$(PPUEXT) : erroru.pp
-        $(FPC) -n -Fu. -T$(OS_TARGET) $(OPT) erroru.pp
+        $(TESTCOMPILER) erroru.pp
 
 ptest$(PPUEXT) : ../test/cg/ptest.pp
-        $(FPC) -n -Fu. -T$(OS_TARGET) $(OPT) -FE. ../test/cg/ptest.pp
+        $(TESTCOMPILER) ../test/cg/ptest.pp
 
 ifeq ($(OS_TARGET),win32)
 win32err$(PPUEXT) : win32err.pp
-        $(FPC) -n -Fu. -T$(OS_TARGET) $(OPT) win32err.pp
+        $(TESTCOMPILER) win32err.pp
 endif
 
 ifdef CCOMPILER
@@ -107,7 +114,7 @@ extra : erroru$(PPUEXT) ptest$(PPUEXT) ../test/cg/obj/$(OS_TARGET)/$(CPU_TARGET)
 ifeq ($(OS_TARGET),win32)
 extra : win32err$(PPUEXT)
 endif
-	
+
 
 #############################
 # Main rules
@@ -115,7 +122,7 @@ endif
 
 all : rtl $(FCL) extra
 
-clean : cleanrtlfcl fpc_clean				
-				
+clean : cleanrtlfcl fpc_clean
+
 clean_ctest :
         -$(DEL) ../test/cg/obj/$(OS_TARGET)/$(CPU_TARGET)/ctest.o
