* remove trailing / from dirs in path

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -28,8 +28,9 @@ FORCE:
 # define inCygwin when running under Cygwin32
 #####################################################################
 
-# We need only / in the path also remove the current dir
-override PATH:=$(subst \,/,$(PATH))
+# We need only / in the path also remove the current dir,
+# also remove trailing /'s
+override PATH:=$(patsubst %/,%,$(subst \,/,$(PATH)))
 
 # Detect unix
 # Darwin is handled specially
@@ -590,7 +591,7 @@ ifdef BSDhier
 INSTALL_EXAMPLEDIR:=$(INSTALL_PREFIX)/share/examples/fpc-$(FPC_VERSION)/$(PACKAGE_NAME)
 else
 ifdef linuxHier
-INSTALL_EXAMPLEDIR:=$(INSTALL_DOCDIR)/examples/fpc-$(FPC_VERSION)/$(PACKAGE_NAME)
+INSTALL_EXAMPLEDIR:=$(INSTALL_DOCDIR)/examples
 else
 INSTALL_EXAMPLEDIR:=$(INSTALL_PREFIX)/doc/fpc-$(FPC_VERSION)/examples/$(PACKAGE_NAME)
 endif
@@ -1351,7 +1352,7 @@ endif
 
 .PHONY: fpc_loaders
 
-ifdef TARGET_LOADERS
+ifneq ($(TARGET_LOADERS),)
 override ALLTARGET+=fpc_loaders
 override CLEANTARGET+=fpc_loaders_clean
 override INSTALLTARGET+=fpc_loaders_install
@@ -1379,7 +1380,7 @@ fpc_loaders_install:
 
 .PHONY: fpc_units
 
-ifdef TARGET_UNITS
+ifneq ($(TARGET_UNITS),)
 override ALLTARGET+=fpc_units
 
 override UNITPPUFILES=$(addsuffix $(PPUEXT),$(TARGET_UNITS))
@@ -1398,7 +1399,7 @@ fpc_units: $(UNITPPUFILES)
 
 .PHONY: fpc_exes
 
-ifdef TARGET_PROGRAMS
+ifneq ($(TARGET_PROGRAMS),)
 override EXEFILES=$(addsuffix $(EXEEXT),$(TARGET_PROGRAMS))
 override EXEOFILES:=$(addsuffix $(OEXT),$(TARGET_PROGRAMS)) $(addprefix $(STATICLIBPREFIX),$(addsuffix $(STATICLIBEXT),$(TARGET_PROGRAMS)))
 
@@ -1435,7 +1436,7 @@ endif
 
 .PHONY: fpc_examples
 
-ifdef TARGET_EXAMPLES
+ifneq ($(TARGET_EXAMPLES),)
 HASEXAMPLES=1
 override EXAMPLESOURCEFILES:=$(wildcard $(addsuffix .pp,$(TARGET_EXAMPLES)) $(addsuffix .pas,$(TARGET_EXAMPLES)) $(addsuffix .dpr,$(TARGET_EXAMPLES)))
 override EXAMPLEFILES:=$(addsuffix $(EXEEXT),$(TARGET_EXAMPLES))
@@ -1449,7 +1450,7 @@ ifeq ($(OS_TARGET),emx)
 override CLEANEXEFILES+=$(addsuffix $(AOUTEXT),$(TARGET_EXAMPLES))
 endif
 endif
-ifdef TARGET_EXAMPLEDIRS
+ifneq ($(TARGET_EXAMPLEDIRS),)
 HASEXAMPLES=1
 endif
 
