--- a/utils/tply/Makefile.fpc
+++ b/utils/tply/Makefile.fpc
@@ -31,7 +31,7 @@ lexlib$(PPUEXT): lexlib.pas
 
 yacclib$(PPUEXT): yacclib.pas
 
-ifdef UNIXINSTALLDIR
+ifdef UNIXHier
 CODPATH=$(INSTALL_PREFIX)/lib/fpc/lexyacc
 else
 CODPATH=$(INSTALL_BINDIR)
