--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -6,7 +6,7 @@
 
 [package]
 name=ide
-version=1.9.2
+version=1.9.4
 
 [target]
 dirs=compiler fakegdb
@@ -227,7 +227,10 @@ clean_compiler:
 
 #
 # $Log$
-# Revision 1.20  2004-04-12 18:16:15  florian
+# Revision 1.21  2004-05-30 09:15:35  florian
+#   * first part of version number update
+#
+# Revision 1.20  2004/04/12 18:16:15  florian
 #   * i386 compilation on debian biarch fixed
 #
 # Revision 1.19  2004/01/05 23:29:35  marco
