* moving of examples fixed

--- a/install/debian/control
+++ b/install/debian/control
@@ -3,12 +3,12 @@ Section: devel
 Priority: optional
 Maintainer: Carlos Laviola <claviola@debian.org>
 Standards-Version: 3.6.1
-Build-Depends: fp-compiler, debhelper, tetex-bin, tetex-extra, awk, dvipdfm, latex2html
+Build-Depends: fp-compiler, debhelper >= 4.2, tetex-bin, tetex-extra, awk, dvipdf
 
 Package: fp-compiler
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319)
-Suggests: fp-utils, fp-docs (>= 1.9.3)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1)
+Suggests: fp-utils, fp-docs (>= 1.9.4)
 Description: Free Pascal Compiler
  The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32bit
  Pascal Compiler. It comes with fully TP 7.0 compatible run-time library.
@@ -19,8 +19,8 @@ Description: Free Pascal Compiler
  can start compiling anything.
 
 Package: fp-utils
-Architecture: i386
-Recommends: fp-compiler (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Recommends: fp-compiler (= 1.9.4-0.1)
 Description: Free Pascal Utils
  This package contains some handy utils for usage with the Free Pascal
  Compiler:
@@ -41,14 +41,14 @@ Description: Free Pascal Documentation
  only available in PDF format.
 
 Package: fp-units-rtl
-Architecture: i386
-Recommends: fp-compiler (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Recommends: fp-compiler (= 1.9.4-0.1)
 Description: Free Pascal Runtime Library
  Runtime Libraries for the Free Pascal Compiler.
 
 Package: fp-units-base
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1)
 Description: Free Pascal base units
  Free Pascal units for common libraries, some of these units are also
  required by the Free Component Library :
@@ -57,26 +57,26 @@ Description: Free Pascal base units
   - ZLib
 
 Package: fp-units-fcl
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319), fp-units-base (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1), fp-units-base (= 1.9.4-0.1)
 Description: Free Pascal Free Component Library
  Free Component Library for the Free Pascal Compiler.
 
 Package: fp-units-gtk
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319), fp-units-fcl (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1), fp-units-fcl (= 1.9.4-0.1)
 Description: Free Pascal units for GTK 1.2.x
  Free Pascal units and examples to create programs with GTK 1.2.x
 
 Package: fp-units-gnome1
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319), fp-units-gtk (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1), fp-units-gtk (= 1.9.4-0.1)
 Description: Free Pascal units for GNOME 1
  Free Pascal units and examples to create programs for GNOME 1
 
 Package: fp-units-db
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1)
 Description: Free Pascal units for some database libraries
  Free Pascal units with bindings for:
   - Mysql
@@ -88,8 +88,8 @@ Description: Free Pascal units for some database libraries
   - Sqlite
   
 Package: fp-units-gfx
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319), fp-units-base (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1), fp-units-base (= 1.9.4-0.1)
 Description: Free Pascal units for some graphics libraries
  Free Pascal units with bindings for:
   - Forms 0.88
@@ -98,16 +98,16 @@ Description: Free Pascal units for some graphics libraries
   - OpenGL
 
 Package: fp-units-net
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1)
 Description: Free Pascal units for networking
  Free Pascal units for creating network tools:
   - Inet unit for easier tcp/ip handling
   - UnCGI unit for easy cgi handling
 
 Package: fp-units-misc
-Architecture: i386
-Depends: fp-units-rtl (= 1.9.3-20040319)
+Architecture: i386 powerpc
+Depends: fp-units-rtl (= 1.9.4-0.1)
 Description: Free Pascal miscellaneous units
  Free Pascal miscellaneous units for:
   - Utmp
