--- a/install/debian/control.in
+++ b/install/debian/control.in
@@ -3,10 +3,10 @@ Section: devel
 Priority: optional
 Maintainer: Carlos Laviola <claviola@debian.org>
 Standards-Version: 3.6.1
-Build-Depends: fp-compiler, debhelper, tetex-bin, tetex-extra, awk, dvipdfm, latex2html
+Build-Depends: fp-compiler, debhelper >= 4.2, tetex-bin, tetex-extra, awk, dvipdf
 
 Package: fp-compiler
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion})
 Suggests: fp-utils, fp-docs (>= %{fpcversion})
 Description: Free Pascal Compiler
@@ -19,7 +19,7 @@ Description: Free Pascal Compiler
  can start compiling anything.
 
 Package: fp-utils
-Architecture: i386
+Architecture: i386 powerpc
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal Utils
  This package contains some handy utils for usage with the Free Pascal
@@ -41,13 +41,13 @@ Description: Free Pascal Documentation
  only available in PDF format.
 
 Package: fp-units-rtl
-Architecture: i386
+Architecture: i386 powerpc
 Recommends: fp-compiler (= %{packageversion})
 Description: Free Pascal Runtime Library
  Runtime Libraries for the Free Pascal Compiler.
 
 Package: fp-units-base
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal base units
  Free Pascal units for common libraries, some of these units are also
@@ -57,25 +57,25 @@ Description: Free Pascal base units
   - ZLib
 
 Package: fp-units-fcl
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal Free Component Library
  Free Component Library for the Free Pascal Compiler.
 
 Package: fp-units-gtk
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion}), fp-units-fcl (= %{packageversion})
 Description: Free Pascal units for GTK 1.2.x
  Free Pascal units and examples to create programs with GTK 1.2.x
 
 Package: fp-units-gnome1
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion}), fp-units-gtk (= %{packageversion})
 Description: Free Pascal units for GNOME 1
  Free Pascal units and examples to create programs for GNOME 1
 
 Package: fp-units-db
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal units for some database libraries
  Free Pascal units with bindings for:
@@ -88,7 +88,7 @@ Description: Free Pascal units for some database libraries
   - Sqlite
   
 Package: fp-units-gfx
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion}), fp-units-base (= %{packageversion})
 Description: Free Pascal units for some graphics libraries
  Free Pascal units with bindings for:
@@ -98,7 +98,7 @@ Description: Free Pascal units for some graphics libraries
   - OpenGL
 
 Package: fp-units-net
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal units for networking
  Free Pascal units for creating network tools:
@@ -106,7 +106,7 @@ Description: Free Pascal units for networking
   - UnCGI unit for easy cgi handling
 
 Package: fp-units-misc
-Architecture: i386
+Architecture: i386 powerpc
 Depends: fp-units-rtl (= %{packageversion})
 Description: Free Pascal miscellaneous units
  Free Pascal miscellaneous units for:
