+ added morphos target

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -796,6 +796,13 @@ SHAREDLIBEXT=.library
 FPCMADE=fpcmade.amg
 endif
 
+# MorphOS
+ifeq ($(OS_TARGET),morphos)
+EXEEXT=
+SHAREDLIBEXT=.library
+FPCMADE=fpcmade.mos
+endif
+
 # Atari
 ifeq ($(OS_TARGET),atari)
 EXEEXT=.ttp
