--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -58,13 +58,11 @@ UNITPREFIX=rtl
 
 ifeq ($(findstring 1.0.,$(FPC_VERSION)),)
 SYSTEMUNIT=system
-PRT0=prt0
 override FPCOPT+=-dNOMOUSE
 loaders+=gprt0
 else
 SYSTEMUNIT=sysbsd
 override FPCOPT+=-dUNIX -dNOMOUSE
-PRT0=prt0_10
 endif
 
 # Use new feature from 1.0.5 version
@@ -109,8 +107,8 @@ SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS)
 # Loaders
 #
 
-prt0$(OEXT) : $(CPU_TARGET)/$(PRT0).as
-        $(AS) -o prt0$(OEXT) $(CPU_TARGET)/$(PRT0).as
+prt0$(OEXT) : $(CPU_TARGET)/prt0.as
+        $(AS) -o prt0$(OEXT) $(CPU_TARGET)/prt0.as
 
 cprt0$(OEXT) : $(CPU_TARGET)/cprt0.as
         $(AS) -o cprt0$(OEXT) $(CPU_TARGET)/cprt0.as
