--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -11,7 +11,7 @@ fpcpackage=y
 [target]
 loaders=prt0 cprt0 gprt0
 units=$(SYSTEMUNIT) objpas strings syscall sysctl unixtype baseunix unixutil \
-      unix rtlconst initc cmem \
+      unix rtlconst initc cmem matrix \
       dos dl termio objects printer \
       sysutils typinfo systhrds types classes math varutils dynlibs \
       cpu mmx charset ucomplex crt getopts heaptrc lineinfo \
