* disable dbase for non-i386 until it is really tested

--- a/fcl/db/Makefile.fpc
+++ b/fcl/db/Makefile.fpc
@@ -6,7 +6,8 @@
 main=fcl
 
 [target]
-dirs=dbase sdf memds
+dirs=sdf memds
+dirs_i386=dbase
 dirs_linux=mysql interbase sqlite
 dirs_freebsd=mysql interbase sqlite
 dirs_darwin=mysql interbase sqlite
