--- a/tests/Makefile.fpc
+++ b/tests/Makefile.fpc
@@ -172,8 +172,8 @@ endif
 ifneq ($(OS_TARGET),$(TEST_OS_TARGET))
 override DOTESTOPT+=-Y-T$(TEST_OS_TARGET)
 endif
-ifneq ($(OS_TARGET),$(TEST_BINUTILSPREFIX))
-override DOTESTOPT+=-Y-XP$(TEST_BINUTILSPREFIX)
+ifneq ($(TEST_BINUTILSPREFIX),) 
+override DOTESTOPT+=-Y-XP$(TEST_BINUTILSPREFIX) -Y-Xd
 endif
 ifdef TEST_RSH
 override DOTESTOPT+=-R$(TEST_RSH)
