--- a/install/doc/Makefile
+++ b/install/doc/Makefile
@@ -2,12 +2,32 @@
 # Man page installation for linux
 #
 
+ifndef FPC
+ifdef PP
+FPC=$(PP)
+endif
+endif
+ifndef FPC
+FPCPROG:=$(strip $(wildcard $(addsuffix /fpc$(SRCEXEEXT),$(SEARCHPATH))))
+ifneq ($(FPCPROG),)
+FPCPROG:=$(firstword $(FPCPROG))
+FPC:=$(shell $(FPCPROG) -PB)
+ifneq ($(findstring Error,$(FPC)),)
+override FPC=ppc386
+endif
+else
+override FPC=ppc386
+endif
+endif
+override FPC:=$(subst $(SRCEXEEXT),,$(FPC))
+override FPC:=$(subst \,/,$(FPC))$(SRCEXEEXT)
+
 ifndef INSTALL_PREFIX
 INSTALL_PREFIX=/usr/local
 endif
 
 ifndef INSTALL_DOCDIR
-INSTALL_DOCDIR:=$(INSTALL_PREFIX)/doc/fpc-$(shell ppc386 -iV)
+INSTALL_DOCDIR:=$(INSTALL_PREFIX)/doc/fpc-$(shell $(FPC) -iV)
 endif 
 
 installdoc:
