--- a/docs/kbdex/Makefile
+++ b/docs/kbdex/Makefile
@@ -5,7 +5,27 @@
 #######################################################################
 
 # Compiler
-PP=ppc386
+
+ifndef FPC
+ifdef PP
+FPC=$(PP)
+endif
+endif
+ifndef FPC
+FPCPROG:=$(strip $(wildcard $(addsuffix /fpc$(SRCEXEEXT),$(SEARCHPATH))))
+ifneq ($(FPCPROG),)
+FPCPROG:=$(firstword $(FPCPROG))
+FPC:=$(shell $(FPCPROG) -PB)
+ifneq ($(findstring Error,$(FPC)),)
+override FPC=ppc386
+endif
+else
+override FPC=ppc386
+endif
+endif
+override FPC:=$(subst $(SRCEXEEXT),,$(FPC))
+override FPC:=$(subst \,/,$(FPC))$(SRCEXEEXT)
+
 
 # Unit directory
 # UNITDIR=/usr/lib/ppc/0.99.0/linuxunits
@@ -50,7 +70,7 @@ clean :
 	rm -f *.ow *.sw *.exe *.dll
  
 $(OBJECTS): %: %.pp
-	$(PP) $(PPOPTS) $*
+	$(FPC) $(PPOPTS) $*
 
 $(TEXOBJECTS): %.tex: %.pp head.tex foot.tex
 	$(PP2TEX) $*
@@ -58,4 +78,4 @@ $(TEXOBJECTS): %.tex: %.pp head.tex foot.tex
 ex9: ex9.pp logkeys.ppu
 
 logkeys.ppu: logkeys.pp
-	$(PP) $(PPOPTS) logkeys.pp
+	$(FPC) $(PPOPTS) logkeys.pp
