--- a/docs/progex/Makefile
+++ b/docs/progex/Makefile
@@ -5,8 +5,25 @@
 #######################################################################
 
 # Compiler
-PP=ppc386
-
+ifndef FPC
+ifdef PP
+FPC=$(PP)
+endif
+endif
+ifndef FPC
+FPCPROG:=$(strip $(wildcard $(addsuffix /fpc$(SRCEXEEXT),$(SEARCHPATH))))
+ifneq ($(FPCPROG),)
+FPCPROG:=$(firstword $(FPCPROG))
+FPC:=$(shell $(FPCPROG) -PB)
+ifneq ($(findstring Error,$(FPC)),)
+override FPC=ppc386
+endif
+else
+override FPC=ppc386
+endif
+endif
+override FPC:=$(subst $(SRCEXEEXT),,$(FPC))
+override FPC:=$(subst \,/,$(FPC))$(SRCEXEEXT)
 # Unit directory
 # UNITDIR=/usr/lib/ppc/0.99.0/linuxunits
 
@@ -54,7 +71,7 @@ clean :
 	rm -f *.ow *.sw *.exe *.dll
  
 $(OBJECTS): %: %.pp $(LIBOBJECT)
-	$(PP) $(PPOPTS) $*
+	$(FPC) $(PPOPTS) $*
 
 $(TEXOBJECTS): %.tex: %.pp head.tex foot.tex
 	$(PP2TEX) $*
@@ -63,7 +80,7 @@ $(CTEXOBJECTS): %.tex: %.c head.tex foot.tex
 	$(C2TEX) $*
 
 libsubs.so: subs.pp
-	$(PP) $(PPOPTS) $<
+	$(FPC) $(PPOPTS) $<
 
 ctest: ctest.c libsubs.so
 	$(CC) -o ctest ctest.c -lsubs
